# html_renderer

./: README.html  README.md  example.html  pyproject.toml  setup.py
.github/workflows/: release.yml
html_renderer/: plotly_helper.py  renderer.py
html_renderer/examples/: examples.py
