[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "html_renderer"
version = "0.0.2"
authors = [
  { name="Senthil Kumaran", email="senthilkumaran1803@gmail.com" },
]
description = "A package for rendering HTML with Plotly figures."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Senthilsk10/html_renderer"
"Bug Tracker" = "https://github.com/Senthilsk10/html_renderer/issues"
